--- a/.project
+++ b/.project
@@ -33,4 +33,11 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>WebContent/WEB-INF/lib/primefaces-3.5.jar</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/Program%20Files%20(x86)/Java/jre6/lib/ext/primefaces-3.5.jar</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
