--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -36,7 +36,7 @@
 		</init-param>
 		<init-param>
 			<param-name>uploadDirectory</param-name>
-			<param-value>/SDK/GLSL/tmp</param-value>
+			<param-value>/tmp</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
